# RealEstatePredictor

./: .replit  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
assets/: image_urls.py
data/: property_data.py
models/: price_predictor.py
pages/: __init__.py  dashboard.py  home.py  market_trends.py  property_comparison.py
utils/: data_processor.py
